# django-pydantic-jsonfield

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  setup.py
django_pydantic_jsonfield/: fields.py  forms.py
pydantic_jsonfield/: fields.py  forms.py
tests/: settings.py  test_fields.py
